# data-science-2023-2024

./: README.md
Capstone/: README.md
Data_Engineering_Portfolio/: README.md
Machine_Learning_Engineering/Containerizing_Basic_API/: Dockerfile  pyproject.toml
Machine_Learning_Engineering/Containerizing_Basic_API/src/: main.py
Machine_Learning_Engineering/Containerizing_Basic_API/tests/: test_src.py
Machine_Learning_Engineering/Data_Models_Inference/: Dockerfile  pyproject.toml
Machine_Learning_Engineering/Data_Models_Inference/src/: main.py
Machine_Learning_Engineering/Data_Models_Inference/tests/: test_src.py
Machine_Learning_Engineering/Data_Models_Inference/trainer/: model_pipeline.pkl
Machine_Learning_Engineering/Deployment_to_Azure_Kubernetes/: Dockerfile  pyproject.toml
Machine_Learning_Engineering/Deployment_to_Azure_Kubernetes/.k8s/base/: deployment-lab4.yaml  deployment-redis.yaml  kustomization.yaml  service-lab4.yaml
Machine_Learning_Engineering/Deployment_to_Azure_Kubernetes/.k8s/overlays/dev/: kustomization.yaml
Machine_Learning_Engineering/Deployment_to_Azure_Kubernetes/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-lab4.yaml  virtual-service.yaml
Machine_Learning_Engineering/Deployment_to_Azure_Kubernetes/src/: main.py
Machine_Learning_Modeling/: Classification_with_Neural_Networks.ipynb  Convolutional_Neural_Networks.ipynb  Decision_Forests_and_Data_Augmentations_Transformations.ipynb  EDA_with_Pandas_Tensorflow.ipynb  K_Means_Clustering.ipynb  Keras_Classification_Training_Evaluation.ipynb  Linear_Regression_with_Gradient_Descent.ipynb  Multiclass_Classification_with_Keras.ipynb  Text_Embeddings.ipynb
(+86 files in other folders)
