[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Anson Quon <aquon@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi= "^0.108"
uvicorn= "^0.25"

[tool.poetry.group.dev.dependencies]
pytest= "^7.4"
httpx= "^0.26"
ruff= "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
