[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Anson Quon <aquon@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
joblib = "^1.3.2"
scikit-learn = "1.3.2"
pydantic = "^2.5"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"
pytest = "^7.4.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
